// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Home Page Matches snapshot in large mobile view 1`] = `
<div>
  <div
    class="sc-ggWZvA KdodO"
    data-testid="video-container"
  >
    <div
      aria-description="Video 1"
      cardsperrow="2"
      class="sc-jwTyAe bIsNtm"
      role="link"
      tabindex="0"
    >
      <img
        alt="Thumbnail image"
        class="sc-hjsuWn dvtMdC"
      />
      <p
        class="sc-dTvVRJ dmYGZj"
      >
        Video 1
      </p>
    </div>
    <div
      aria-description="Video 2"
      cardsperrow="2"
      class="sc-jwTyAe bIsNtm"
      role="link"
      tabindex="0"
    >
      <img
        alt="Thumbnail image"
        class="sc-hjsuWn dvtMdC"
      />
      <p
        class="sc-dTvVRJ dmYGZj"
      >
        Video 2
      </p>
    </div>
    <div
      aria-description="Video 3"
      cardsperrow="2"
      class="sc-jwTyAe bIsNtm"
      role="link"
      tabindex="0"
    >
      <img
        alt="Thumbnail image"
        class="sc-hjsuWn dvtMdC"
      />
      <p
        class="sc-dTvVRJ dmYGZj"
      >
        Video 3
      </p>
    </div>
    <div
      aria-description="Video 4"
      cardsperrow="2"
      class="sc-jwTyAe bIsNtm"
      role="link"
      tabindex="0"
    >
      <img
        alt="Thumbnail image"
        class="sc-hjsuWn dvtMdC"
      />
      <p
        class="sc-dTvVRJ dmYGZj"
      >
        Video 4
      </p>
    </div>
    <div
      aria-description="Video 5"
      cardsperrow="2"
      class="sc-jwTyAe bIsNtm"
      role="link"
      tabindex="0"
    >
      <img
        alt="Thumbnail image"
        class="sc-hjsuWn dvtMdC"
      />
      <p
        class="sc-dTvVRJ dmYGZj"
      >
        Video 5
      </p>
    </div>
    <div
      aria-description="Video 6"
      cardsperrow="2"
      class="sc-jwTyAe bIsNtm"
      role="link"
      tabindex="0"
    >
      <img
        alt="Thumbnail image"
        class="sc-hjsuWn dvtMdC"
      />
      <p
        class="sc-dTvVRJ dmYGZj"
      >
        Video 6
      </p>
    </div>
  </div>
</div>
`;

exports[`Home Page Matches snapshot in small mobile view 1`] = `
<div>
  <div
    class="sc-ggWZvA dpiZgr"
    data-testid="video-container"
  >
    <div
      aria-description="Video 1"
      cardsperrow="1"
      class="sc-jwTyAe eUBeXh"
      role="link"
      tabindex="0"
    >
      <img
        alt="Thumbnail image"
        class="sc-hjsuWn dvtMdC"
      />
      <p
        class="sc-dTvVRJ dmYGZj"
      >
        Video 1
      </p>
    </div>
    <div
      aria-description="Video 2"
      cardsperrow="1"
      class="sc-jwTyAe eUBeXh"
      role="link"
      tabindex="0"
    >
      <img
        alt="Thumbnail image"
        class="sc-hjsuWn dvtMdC"
      />
      <p
        class="sc-dTvVRJ dmYGZj"
      >
        Video 2
      </p>
    </div>
    <div
      aria-description="Video 3"
      cardsperrow="1"
      class="sc-jwTyAe eUBeXh"
      role="link"
      tabindex="0"
    >
      <img
        alt="Thumbnail image"
        class="sc-hjsuWn dvtMdC"
      />
      <p
        class="sc-dTvVRJ dmYGZj"
      >
        Video 3
      </p>
    </div>
    <div
      aria-description="Video 4"
      cardsperrow="1"
      class="sc-jwTyAe eUBeXh"
      role="link"
      tabindex="0"
    >
      <img
        alt="Thumbnail image"
        class="sc-hjsuWn dvtMdC"
      />
      <p
        class="sc-dTvVRJ dmYGZj"
      >
        Video 4
      </p>
    </div>
    <div
      aria-description="Video 5"
      cardsperrow="1"
      class="sc-jwTyAe eUBeXh"
      role="link"
      tabindex="0"
    >
      <img
        alt="Thumbnail image"
        class="sc-hjsuWn dvtMdC"
      />
      <p
        class="sc-dTvVRJ dmYGZj"
      >
        Video 5
      </p>
    </div>
    <div
      aria-description="Video 6"
      cardsperrow="1"
      class="sc-jwTyAe eUBeXh"
      role="link"
      tabindex="0"
    >
      <img
        alt="Thumbnail image"
        class="sc-hjsuWn dvtMdC"
      />
      <p
        class="sc-dTvVRJ dmYGZj"
      >
        Video 6
      </p>
    </div>
  </div>
</div>
`;

exports[`Home Page Matches snapshot in tablet view 1`] = `
<div>
  <div
    class="sc-ggWZvA KdodO"
    data-testid="video-container"
  >
    <div
      aria-description="Video 1"
      cardsperrow="3"
      class="sc-jwTyAe iCgvIb"
      role="link"
      tabindex="0"
    >
      <img
        alt="Thumbnail image"
        class="sc-hjsuWn dvtMdC"
      />
      <p
        class="sc-dTvVRJ dmYGZj"
      >
        Video 1
      </p>
    </div>
    <div
      aria-description="Video 2"
      cardsperrow="3"
      class="sc-jwTyAe iCgvIb"
      role="link"
      tabindex="0"
    >
      <img
        alt="Thumbnail image"
        class="sc-hjsuWn dvtMdC"
      />
      <p
        class="sc-dTvVRJ dmYGZj"
      >
        Video 2
      </p>
    </div>
    <div
      aria-description="Video 3"
      cardsperrow="3"
      class="sc-jwTyAe iCgvIb"
      role="link"
      tabindex="0"
    >
      <img
        alt="Thumbnail image"
        class="sc-hjsuWn dvtMdC"
      />
      <p
        class="sc-dTvVRJ dmYGZj"
      >
        Video 3
      </p>
    </div>
    <div
      aria-description="Video 4"
      cardsperrow="3"
      class="sc-jwTyAe iCgvIb"
      role="link"
      tabindex="0"
    >
      <img
        alt="Thumbnail image"
        class="sc-hjsuWn dvtMdC"
      />
      <p
        class="sc-dTvVRJ dmYGZj"
      >
        Video 4
      </p>
    </div>
    <div
      aria-description="Video 5"
      cardsperrow="3"
      class="sc-jwTyAe iCgvIb"
      role="link"
      tabindex="0"
    >
      <img
        alt="Thumbnail image"
        class="sc-hjsuWn dvtMdC"
      />
      <p
        class="sc-dTvVRJ dmYGZj"
      >
        Video 5
      </p>
    </div>
    <div
      aria-description="Video 6"
      cardsperrow="3"
      class="sc-jwTyAe iCgvIb"
      role="link"
      tabindex="0"
    >
      <img
        alt="Thumbnail image"
        class="sc-hjsuWn dvtMdC"
      />
      <p
        class="sc-dTvVRJ dmYGZj"
      >
        Video 6
      </p>
    </div>
  </div>
</div>
`;

exports[`Home Page renders additional videos from useAPI result when scrollbar is at bottom 1`] = `
<div>
  <div
    class="sc-ggWZvA KdodO"
    data-testid="video-container"
  >
    <div
      aria-description="Video 1"
      cardsperrow="5"
      class="sc-jwTyAe dcUvpJ"
      role="link"
      tabindex="0"
    >
      <img
        alt="Thumbnail image"
        class="sc-hjsuWn dvtMdC"
      />
      <p
        class="sc-dTvVRJ dmYGZj"
      >
        Video 1
      </p>
    </div>
    <div
      aria-description="Video 2"
      cardsperrow="5"
      class="sc-jwTyAe dcUvpJ"
      role="link"
      tabindex="0"
    >
      <img
        alt="Thumbnail image"
        class="sc-hjsuWn dvtMdC"
      />
      <p
        class="sc-dTvVRJ dmYGZj"
      >
        Video 2
      </p>
    </div>
    <div
      aria-description="Video 3"
      cardsperrow="5"
      class="sc-jwTyAe dcUvpJ"
      role="link"
      tabindex="0"
    >
      <img
        alt="Thumbnail image"
        class="sc-hjsuWn dvtMdC"
      />
      <p
        class="sc-dTvVRJ dmYGZj"
      >
        Video 3
      </p>
    </div>
    <div
      aria-description="Video 4"
      cardsperrow="5"
      class="sc-jwTyAe dcUvpJ"
      role="link"
      tabindex="0"
    >
      <img
        alt="Thumbnail image"
        class="sc-hjsuWn dvtMdC"
      />
      <p
        class="sc-dTvVRJ dmYGZj"
      >
        Video 4
      </p>
    </div>
    <div
      aria-description="Video 5"
      cardsperrow="5"
      class="sc-jwTyAe dcUvpJ"
      role="link"
      tabindex="0"
    >
      <img
        alt="Thumbnail image"
        class="sc-hjsuWn dvtMdC"
      />
      <p
        class="sc-dTvVRJ dmYGZj"
      >
        Video 5
      </p>
    </div>
    <div
      aria-description="Video 6"
      cardsperrow="5"
      class="sc-jwTyAe dcUvpJ"
      role="link"
      tabindex="0"
    >
      <img
        alt="Thumbnail image"
        class="sc-hjsuWn dvtMdC"
      />
      <p
        class="sc-dTvVRJ dmYGZj"
      >
        Video 6
      </p>
    </div>
  </div>
</div>
`;

exports[`Home Page renders videos from useAPI result 1`] = `
<div>
  <div
    class="sc-ggWZvA KdodO"
    data-testid="video-container"
    style=""
  >
    <div
      aria-description="Video 1"
      cardsperrow="5"
      class="sc-jwTyAe dcUvpJ"
      role="link"
      tabindex="0"
    >
      <img
        alt="Thumbnail image"
        class="sc-hjsuWn dvtMdC"
      />
      <p
        class="sc-dTvVRJ dmYGZj"
      >
        Video 1
      </p>
    </div>
    <div
      aria-description="Video 2"
      cardsperrow="5"
      class="sc-jwTyAe dcUvpJ"
      role="link"
      tabindex="0"
    >
      <img
        alt="Thumbnail image"
        class="sc-hjsuWn dvtMdC"
      />
      <p
        class="sc-dTvVRJ dmYGZj"
      >
        Video 2
      </p>
    </div>
    <div
      aria-description="Video 3"
      cardsperrow="5"
      class="sc-jwTyAe dcUvpJ"
      role="link"
      tabindex="0"
    >
      <img
        alt="Thumbnail image"
        class="sc-hjsuWn dvtMdC"
      />
      <p
        class="sc-dTvVRJ dmYGZj"
      >
        Video 3
      </p>
    </div>
  </div>
</div>
`;

exports[`Home Page shows error message when hasError is set 1`] = `
<div>
  <div
    class="sc-ggWZvA KdodO"
    data-testid="video-container"
  >
    <p>
      API error
    </p>
  </div>
</div>
`;

exports[`Home Page shows loader when isLoading is true 1`] = `
<div>
  <div
    class="sc-ggWZvA KdodO"
    data-testid="video-container"
  >
    <div
      class="sc-bRKDuR fMrgJQ"
      role="progressbar"
    >
      <svg
        class="spinner"
        viewBox="0 0 50 50"
      >
        <circle
          class="path"
          cx="25"
          cy="25"
          fill="none"
          r="20"
          stroke-width="5"
        />
      </svg>
    </div>
  </div>
</div>
`;
